<resources>
    <string name="app_name">MDb</string>

    <string name="filter">Filter</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="movie_description_default">In the near future, a weary Logan cares for an ailing Professor X in a hideout on the Mexican border. But Logans attempts to hide from the world and his legacy are upended when a young mutant arrives, pursued by dark forces</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="my_favorites">My Favorites</string>

    <string name="error_failed_to_update_movies">Failed to retrieve data</string>
    <string name="error_failed_to_get_movie_details">Failed to retrieve movie details</string>
    <string name="no_reviews">No reviews</string>
    <string name="no_trailers">No trailers</string>
    <string name="trailers">TRAILERS</string>
    <string name="reviews">REVIEWS</string>
    <string name="to_add_a_movie_to_the_favorites_n_tap_the_heart_icon_from_the_movie_item">To add a movie to the favorites,\n tap the heart icon from the movie item.</string>
    <string name="no_favorite_movies">No favorite movies</string>


</resources>
