<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    android:clickable="true"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@android:color/black"
                fresco:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/back_button"/>

            <ImageView
                android:id="@+id/favorites_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:src="@drawable/heart_button_selector"
                />

            <ImageView
                android:id="@+id/backdrop_gradient_view"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_alignBottom="@+id/header"
                android:layout_alignParentStart="true"/>

            <include
                layout="@layout/item_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/header"
                android:layout_alignParentStart="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp">

            <android.support.v7.widget.CardView
                android:layout_width="180dp"
                android:layout_height="250dp"
                card_view:cardBackgroundColor="@color/color_black"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="3dp">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="180dp"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"/>
            </android.support.v7.widget.CardView>

            <uk.co.deanwild.flowtextview.FlowTextView
                android:id="@+id/movie_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_description_default"
                android:textColor="@android:color/white"
                android:textSize="12sp">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="250dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="13dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"/>

            </uk.co.deanwild.flowtextview.FlowTextView>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:text="@string/trailers"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="@string/trailers"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/no_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="13dp"
                android:text="@string/no_trailers"
                android:textColor="@color/color_mdb_green"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"/>


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:text="@string/reviews"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/no_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="13dp"
                android:text="@string/no_reviews"
                android:textColor="@color/color_mdb_green"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:scrollbars="vertical"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>